[v1.0.7] improved packaging and permissions